--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
-    "react-native-config": "^0.12.0",
+    "react-native-config": "0.11.7",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-localize": "^1.3.1",
     "react-native-reanimated": "^1.4.0",
